--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "locomotive-scroll": "^4.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-locomotive-scroll": "^0.2.0",
     "react-scripts": "^5.0.1",
     "sass": "^1.32.11"
   },
